fix: text wrap as pre-wrap

--- a/src/route/components/Card.css
+++ b/src/route/components/Card.css
@@ -29,10 +29,10 @@ h3{
 h5{
     color: #878383;
     font-weight: 300;
-
 }
 h3,h4,h5{
     margin: 0;
+    white-space: pre-wrap;
 }
 .menu{
     position: absolute;
